--- a/recipes/burrofries.html
+++ b/recipes/burrofries.html
@@ -7,6 +7,34 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Alkaline Burro Banana Fries</h1>
+    <a href="recipes/burrofries.html">Alkaline Burro Banana Fries</a>
+            <img src="images/bfriespic.png">
+            <p></p>
+            <h2>Description</h2>
+                <p>
+                    Burro Banana Fries are arguably the best substitute for potatoes for this dish. Unripe burro bananas hardly even taste like bananas at all and are so deceptive that it's guilt-free!
+                </p>
+                <p>
+                    This side dish is common in countries close to the equator and East Africa as well.
+                </p>
+                <p>
+                    As you prep your first green burro banana, you'll want to start planning trips to the nearest coastal city not just surrounded by palm trees.
+                </p>
+            <p></p>
+            <h3>Ingredients</h3>
+                <ul>
+                    <li>Green/Unripe Burro Bananas</li>
+                    <li>Avocado Oil</li>
+                    <li>Sea Salt</li>
+                    <li>Basil</li>
+                </ul>
+            <p></p>
+            <h4>Steps</h4>
+                <ol>
+                    <li>Peel bananas and slice length-wise into fry shape.</li>
+                    <li>Spray or pour moderate amount of avocado oil that enough to coat all of the fries.</li>
+                    <li>Add some sea salt and generous amount of basil to your desired amount.</li>
+                    <li>Cook it to 400F for 10-15 minutes.</li>
+                </ol>
 </body>
 </html>
