--- a/recipes/oreos.html
+++ b/recipes/oreos.html
@@ -7,6 +7,38 @@
     <title>Alkaline Oreos</title>
 </head>
 <body>
-    <h1>Alkaline Oreos</h1>
+    <body>
+        <a href="recipes/oreos.html">Alkaline Oreos</a>
+                <img src="Images/oreo.jpeg">
+                <p></p>
+                <h2>Description</h2>
+                    <p>
+                        Here is a snack that will satisfy your cravings and wanting you to make some more for the whole family!
+                    </p>
+                <p></p>
+                <h3>Ingredients</h3>
+                    <ul>
+                        <li>2 cups spelt flour</li>
+                        <li>1/4 cup grapeseed oil</li>
+                        <li>2 tbsp tahini</li>
+                        <li>1/3 cup date syrup</li>
+                        <li>pinch sea salt</li>
+                        <li>pack of coconut cream (200g)></li>
+                        <li>100 ml (0.42 cups) spring water</li>
+                        <li>4 tbsp agave syrup</li>
+                    </ul>
+                <p></p>
+                <h4>Steps</h4>
+                    <ol>
+                        <li>
+                            Mix dough together and cut into oreo size pieces. Remember 2 cookies create 1 oreo.
+                        </li>
+                        <li>
+                            Bake cookies for 15 min.
+                        </li>
+                        <li>
+                            Mix cream together and create oreo sandwiches with baked cookies. Let set for 1 hour and enjoy.
+                        </li>
+                    </ol>
 </body>
 </html>
