--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <h2>Meals and Snacks to Start Your Alkaline Diet</h2>
             <div>
                 <ul>
-                    <li><a href='./recipes/burrofries.html'></a></li>
-                    <li><a href='./recipes/oreos.html'></a></li>
-                    <li><a href='./recipes/tuna.html'></a></li>
+                    <li><a href='./recipes/burrofries.html'>Burro Fries</a></li>
+                    <li><a href='./recipes/oreos.html'>Oreos</a></li>
+                    <li><a href='./recipes/tuna.html'>Chickpea Tuna</a></li>
                 </ul>
             </div>
         </body>
